# agentic-mesh-tutorial

./: .gitignore  Dockerfile  README.md  check_results.py  create_dummy_docx.py  docker-compose.yml  dummy_test.docx  empty-space.sh  generate_svg.py  main.py  pyproject.toml  render_mermaid.html
.agent/skills/create_agent/: SKILL.md
.agent/skills/mermaid_best_practices/: SKILL.md
.agent/skills/redis_messaging/: SKILL.md
docs/: component_graph.md  deployment.md  interaction_flow.md  interaction_flow_fr.md  kubernetes_deployment.md  mesh_execution_report.md  python_architecture_strategy.md  redis_architecture.md  redis_cli_manual.md  redis_cli_manual.txt  redis_flow_diagram.md  redis_manual_flow.md  spec.md
k8s/: aggregator.yaml  configmap.yaml  coordinator.yaml  keda-scalers.yaml  producer-job.yaml  redis.yaml  specialists.yaml
src/: main.py  server.py
src/agents/: aggregator.py  base.py  coordinator.py  specialists.py
src/core/: models.py  redis_client.py
src/ingestion/: producer.py
src/web/: index.html
