[project]
name = "agentic-mesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.1",
    "shortuuid>=1.0.13",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
